Adding styles to portfolio

--- a/index.html
+++ b/index.html
@@ -5,22 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV Yaroslav</title>
-    <style>
-        body {
-            background: rgba(85, 130, 245, 0.9);
-            
-        }
-        video,
-        iframe {
-            margin: 50px;
-        }
-        main{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
